and update guest info endpoint and docs
